--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sumar",
   "version": "0.0.1",
-  "description": "Sum of all the values of an array",
+  "description": "Sum all the values of an array",
   "main": "index.js",
   "scripts": {
     "test": "ava",
