--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "sumar",
   "version": "0.0.2",
-  "description": "Sum all the values of an array",
+  "description": "Sum all the values of an array, if they are all numeric",
   "main": "index.js",
   "scripts": {
     "test": "ava",
@@ -30,5 +30,8 @@
   "homepage": "https://github.com/nhsz/sumar#readme",
   "devDependencies": {
     "ava": "^0.19.1"
+  },
+  "dependencies": {
+    "es6-number": "0.0.2"
   }
 }
